add responsive styles and add font files.

--- a/scss/page/aside.scss
+++ b/scss/page/aside.scss
@@ -10,6 +10,7 @@
     @media screen and (max-width: 1080px) {
         padding-right: 5px;
         padding-left: 5px;
+        padding-bottom: 30px;
         width: min-content;
     }
     .aside-title{
@@ -19,13 +20,13 @@
             justify-content: center;
         }
         h3{
-            font-family: 'AvenirBlack';
+            font-family: 'Avenir LT Pro 65 Black';
             font-size: 24px;
             @media screen and (max-width: 1080px) {
                 font-size: 14px;
             }
             span{
-                font-family: 'AvenirBook';
+                font-family: 'Avenir LT Pro Book';
                 @media screen and (max-width: 1080px) {
                     font-size: 12px;
                 }
@@ -90,7 +91,7 @@
                 h6{
                     margin-left: 15px;
                     font-size: 16px;
-                    font-family: 'AvenirMedium';
+                    font-family: 'Avenir LT Pro Medium';
                     color: $white_color;
                     @media screen and (max-width: 1080px) {
                         margin-left: 0;
@@ -112,40 +113,55 @@
             }
         }
     }
-    .aside-following-box h6{
-        margin: 40px 0 30px 30px;
-        font-family: 'AvenirHeavy';
-        font-size: 12px;
-        @media screen and (max-width: 1080px) {
-            margin: 30px 10px 30px 0;
-        }
-    }
-    .aside-following-a{
-        @include align-flex-with-wrap(flex, center, wrap);
-        @media screen and (max-width: 1080px) {
-            display: flex;
-            justify-content: center;
-            flex-direction: column;
-            text-align: center;
-        }
-        img{
-            margin-left: 30px;
-            @media screen and (max-width: 1080px) {
-                margin-left: 0;
-                margin-bottom: 10px;
-            }
-        }
+    .aside-following-box{
         h6{
-            color: $white_color;
-            font-size: 16px;
-            font-family: 'AvenirMedium';
+            margin: 40px 0 30px 30px;
+            font-family: 'Avenir LT Pro 55 Heavy';
+            font-size: 12px;
             @media screen and (max-width: 1080px) {
-                margin: 0 0 10px 0;
+                margin: 30px 10px 30px 0;
+            }
+        }
+        .following-ul{
+            @media screen and (max-width: 1080px) {
+                :nth-child(4){
+                    display: none;
+                }
+                :nth-child(5){
+                    display: none;
+                }
+            }
+            .following-li{
+                .aside-following-a{
+                    @include align-flex-with-wrap(flex, center, wrap);
+                    @media screen and (max-width: 1080px) {
+                        display: flex;
+                        justify-content: center;
+                        flex-direction: column;
+                        text-align: center;
+                    }
+                    img{
+                        margin-left: 30px;
+                        @media screen and (max-width: 1080px) {
+                            margin-left: 0;
+                            margin-bottom: 10px;
+                        }
+                    }
+                    h6{
+                        color: $white_color;
+                        font-size: 16px;
+                        font-family: 'Avenir LT Pro Medium';
+                        @media screen and (max-width: 1080px) {
+                            margin: 0 0 10px 0;
+                        }
+                    }
+                }
             }
         }
     }
+    
     .loadMore{
-        font-family: 'AvenirHeavy';
+        font-family: 'Avenir LT Pro 55 Heavy';
         font-size: 14px;
         color: $white_color;
         margin-left: 30px;
