--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -12,9 +12,6 @@
             align-items: center;
             border-bottom: 1px solid $gray_color;
             padding-bottom: 30px;
-            @media screen and (max-width: 1360px) {
-                @include horizontal (center);
-            }
             .search-box{
                 position: relative;
                 @media screen and (max-width: 1080px) {
@@ -26,8 +23,8 @@
                 border: none;
                 border-radius: 12px;
                 padding: 18px 272px 18px 20px;
-                @include text-styles(14px, 'AvenirHeavy', $black_color);
-                @media screen and (max-width: 1360px) {
+                @include text-styles(14px, 'Avenir LT Pro 55 Heavy', $black_color);
+                @media screen and (max-width: 1370px) {
                     padding-right: 0;
                     margin-right: 10px;
                 }
@@ -70,7 +67,7 @@
                         }
                     }
                     .first .nav-a{
-                        @include text-styles(14px, 'AvenirHeavy', $red_color);
+                        @include text-styles(14px, 'Avenir LT Pro 55 Heavy', $red_color);
                     }
                     .last .nav-a{
                         padding: 20px 40px;
