--- a/scss/page/list-box.scss
+++ b/scss/page/list-box.scss
@@ -3,14 +3,22 @@
     padding: 70px 0;
     border-bottom: 1px solid gray;
     @media screen and (max-width: 1080px) {
-        flex-wrap: wrap;
+        justify-content: center;
+    }
+    @media screen and (max-width: 640px) {
+        flex-direction: column;
     }
     .list-box{
+        @media screen and (max-width: 640px) {
+            justify-content: center;
+        }
         img{
             display: none;
             @media screen and (max-width: 1080px) {
                 display: flex;
                 cursor: pointer;
+                padding-right: 10px;
+                margin-bottom: 50px;
             }
         }
         @media screen and (max-width: 1080px) {
@@ -31,16 +39,16 @@
                 display: none;
             }
             h6{
-                @include text-styles (16px, 'AvenirHeavy', $black_color);
+                @include text-styles (16px, 'Avenir LT Pro 55 Heavy', $black_color);
                 margin-bottom: 40px;
             }
             .list-box-a{
-                @include text-styles (16px, 'AvenirBook', $black_color);
+                @include text-styles (16px, 'Avenir LT Pro Book', $black_color);
                 line-height: 2.5;
             }
             .inside-box-ul{
                 .inside-box-a{
-                    @include text-styles (16px, 'AvenirBook', $black_color);
+                    @include text-styles (16px, 'Avenir LT Pro Book', $black_color);
                     line-height: 2.5;
                 }
             }
