--- a/scss/page/post-nav.scss
+++ b/scss/page/post-nav.scss
@@ -8,19 +8,21 @@
             flex-wrap: wrap;
             justify-content: center;
         }
-        @media screen and (max-width: 900px) {
+        @media screen and (max-width: 1080px) {
             justify-content: space-between;
         }
         @media screen and (max-width: 360px) {
             justify-content: center;
+            flex-direction: column;
         }
         .post-nav-ul{
             display: flex;
-            @media screen and (max-width: 1360px) {
-                flex-wrap: wrap;
+            @media screen and (max-width: 1180px) {
+                width: 100%;
+                justify-content: center;
                 margin-bottom: 10px;
             }
-            @media screen and (max-width: 900px) {
+            @media screen and (max-width: 1080px) {
                 display: none;
             }
             .post-nav-li{
@@ -29,33 +31,33 @@
                     padding-right: 25px;
                 }
                 .post-nav-a{
-                    @include text-styles(16px, 'AvenirBook', $black_color);
+                    @include text-styles(16px, 'Avenir LT Pro Book', $black_color);
                     @include hover-transition ( .3s);
                     &:hover{
                         background-color: #F2F2F2;
                             padding: 20px;
                             border-radius: 12px;
-                            font-family: 'AvenirHeavy';
+                            font-family: 'Avenir LT Pro 55 Heavy';
                     }
                 }
                 .post-nav-a.first{
                     background-color: #F2F2F2;
                     padding: 20px;
                     border-radius: 12px;
-                    font-family: 'AvenirHeavy';
+                    font-family: 'Avenir LT Pro 55 Heavy';
                 }
             }
         }
         .responsive-nav-burger{
             display: none;
-            @media screen and (max-width: 900px) {
+            @media screen and (max-width: 1080px) {
                 display: flex;
                 align-items: center;
                 border-radius: 12px;
                 padding: 8px;
                 border: 1px solid #D8D8D8;
                 font-size: 16px;
-                font-family: "AvenirHeavy";
+                font-family: "Avenir LT Pro 55 Heavy";
                 color: #222222;
                 cursor: pointer;
             }
@@ -72,7 +74,7 @@
             align-items: center;
             border-radius: 12px;
             border: 1px solid #D8D8D8;
-            @include text-styles(16px, 'AvenirHeavy', $black_color);
+            @include text-styles(16px, 'Avenir LT Pro 55 Heavy', $black_color);
             padding: 16px 23px;
             cursor: pointer;
             @media screen and (max-width: 1360px) {
