--- a/scss/partials/fonts.scss
+++ b/scss/partials/fonts.scss
@@ -1,49 +1,107 @@
 @font-face {
-    font-family: 'AvenirMedium';
-    src: url('../../fonts/AvenirMedium.eot');
-    src: url('../../fonts/AvenirMedium.eot') format('embedded-opentype'),
-         url('../../fonts/AvenirMedium.woff2') format('woff2'),
-         url('../../fonts/AvenirMedium.woff') format('woff'),
-         url('../../fonts/AvenirMedium.ttf') format('truetype'),
-         url('../../fonts/AvenirMedium.svg#AvenirMedium') format('svg');
+    font-family: 'Avenir LT Pro 65 Black';
+    src: url('../../fonts/AvenirLTPro-Black.eot');
+    src: url('../../fonts/AvenirLTPro-Black.eot?#iefix') format('embedded-opentype'), url('../../fonts/AvenirLTPro-Black.woff2') format('woff2'), url('../../fonts/AvenirLTPro-Black.woff') format('woff'), url('../../fonts/AvenirLTPro-Black.ttf') format('truetype'), url('../../fonts/AvenirLTPro-Black.svg#AvenirLTPro-Black') format('svg');
+    font-weight: 900;
+    font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
-    font-family: 'AvenirHeavy';
-    src: url('../../fonts/AvenirHeavy.eot');
-    src: url('../../fonts/AvenirHeavy.eot') format('embedded-opentype'),
-         url('../../fonts/AvenirHeavy.woff2') format('woff2'),
-         url('../../fonts/AvenirHeavy.woff') format('woff'),
-         url('../../fonts/AvenirHeavy.ttf') format('truetype'),
-         url('../../fonts/AvenirHeavy.svg#AvenirHeavy') format('svg');
+    font-family: 'Avenir LT Pro 65';
+    src: url('../../fonts/AvenirLTPro-BlackOblique.eot');
+    src: url('../../fonts/AvenirLTPro-BlackOblique.eot?#iefix') format('embedded-opentype'), url('../../fonts/AvenirLTPro-BlackOblique.woff2') format('woff2'), url('../../fonts/AvenirLTPro-BlackOblique.woff') format('woff'), url('../../fonts/AvenirLTPro-BlackOblique.ttf') format('truetype'), url('../../fonts/AvenirLTPro-BlackOblique.svg#AvenirLTPro-BlackOblique') format('svg');
+    font-weight: 900;
+    font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
-    font-family: 'AvenirBook';
-    src: url('../../fonts/AvenirBook.eot');
-    src: url('../../fonts/AvenirBook.eot') format('embedded-opentype'),
-         url('../../fonts/AvenirBook.woff2') format('woff2'),
-         url('../../fonts/AvenirBook.woff') format('woff'),
-         url('../../fonts/AvenirBook.ttf') format('truetype'),
-         url('../../fonts/AvenirBook.svg#AvenirBook') format('svg');
+    font-family: 'Avenir LT Pro Book';
+    src: url('../../fonts/AvenirLTPro-Book.eot');
+    src: url('../../fonts/AvenirLTPro-Book.eot?#iefix') format('embedded-opentype'), url('../../fonts/AvenirLTPro-Book.woff2') format('woff2'), url('../../fonts/AvenirLTPro-Book.woff') format('woff'), url('../../fonts/AvenirLTPro-Book.ttf') format('truetype'), url('../../fonts/AvenirLTPro-Book.svg#AvenirLTPro-Book') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
-    font-family: 'AvenirBlack';
-    src: url('../../fonts/AvenirBlack.eot');
-    src: url('../../fonts/AvenirBlack.eot') format('embedded-opentype'),
-         url('../../fonts/AvenirBlack.woff2') format('woff2'),
-         url('../../fonts/AvenirBlack.woff') format('woff'),
-         url('../../fonts/AvenirBlack.ttf') format('truetype'),
-         url('../../fonts/AvenirBlack.svg#AvenirBlack') format('svg');
+    font-family: 'Avenir LT Pro 45 Book';
+    src: url('../../fonts/AvenirLTPro-BookOblique.eot');
+    src: url('../../fonts/AvenirLTPro-BookOblique.eot?#iefix') format('embedded-opentype'), url('../../fonts/AvenirLTPro-BookOblique.woff2') format('woff2'), url('../../fonts/AvenirLTPro-BookOblique.woff') format('woff'), url('../../fonts/AvenirLTPro-BookOblique.ttf') format('truetype'), url('../../fonts/AvenirLTPro-BookOblique.svg#AvenirLTPro-BookOblique') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
-    font-family: 'Avenir';
-    src: url('../../fonts/AvenirRegular.eot');
-    src: url('../../fonts/AvenirRegular.eot') format('embedded-opentype'),
-         url('../../fonts/AvenirRegular.woff2') format('woff2'),
-         url('../../fonts/AvenirRegular.woff') format('woff'),
-         url('../../fonts/AvenirRegular.ttf') format('truetype'),
-         url('../../fonts/AvenirRegular.svg#AvenirRegular') format('svg');
+    font-family: 'Avenir LT Pro 55 Heavy';
+    src: url('../../fonts/AvenirLTPro-Heavy.eot');
+    src: url('../../fonts/AvenirLTPro-Heavy.eot?#iefix') format('embedded-opentype'), url('../../fonts/AvenirLTPro-Heavy.woff2') format('woff2'), url('../../fonts/AvenirLTPro-Heavy.woff') format('woff'), url('../../fonts/AvenirLTPro-Heavy.ttf') format('truetype'), url('../../fonts/AvenirLTPro-Heavy.svg#AvenirLTPro-Heavy') format('svg');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Avenir LT Pro 55 Roman';
+    src: url('../../fonts/AvenirLTPro-HeavyOblique.eot');
+    src: url('../../fonts/AvenirLTPro-HeavyOblique.eot?#iefix') format('embedded-opentype'), url('../../fonts/AvenirLTPro-HeavyOblique.woff2') format('woff2'), url('../../fonts/AvenirLTPro-HeavyOblique.woff') format('woff'), url('../../fonts/AvenirLTPro-HeavyOblique.ttf') format('truetype'), url('../../fonts/AvenirLTPro-HeavyOblique.svg#AvenirLTPro-HeavyOblique') format('svg');
+    font-weight: bold;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Avenir LT Pro avenir';
+    src: url('../../fonts/AvenirLTPro-Light.eot');
+    src: url('../../fonts/AvenirLTPro-Light.eot?#iefix') format('embedded-opentype'), url('../../fonts/AvenirLTPro-Light.woff2') format('woff2'), url('../../fonts/AvenirLTPro-Light.woff') format('woff'), url('../../fonts/AvenirLTPro-Light.ttf') format('truetype'), url('../../fonts/AvenirLTPro-Light.svg#AvenirLTPro-Light') format('svg');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Avenir LT Pro 35';
+    src: url('../../fonts/AvenirLTPro-LightOblique.eot');
+    src: url('../../fonts/AvenirLTPro-LightOblique.eot?#iefix') format('embedded-opentype'), url('../../fonts/AvenirLTPro-LightOblique.woff2') format('woff2'), url('../../fonts/AvenirLTPro-LightOblique.woff') format('woff'), url('../../fonts/AvenirLTPro-LightOblique.ttf') format('truetype'), url('../../fonts/AvenirLTPro-LightOblique.svg#AvenirLTPro-LightOblique') format('svg');
+    font-weight: 300;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Avenir LT Pro Medium';
+    src: url('../../fonts/AvenirLTPro-Medium.eot');
+    src: url('../../fonts/AvenirLTPro-Medium.eot?#iefix') format('embedded-opentype'), url('../../fonts/AvenirLTPro-Medium.woff2') format('woff2'), url('../../fonts/AvenirLTPro-Medium.woff') format('woff'), url('../../fonts/AvenirLTPro-Medium.ttf') format('truetype'), url('../../fonts/AvenirLTPro-Medium.svg#AvenirLTPro-Medium') format('svg');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Avenir LT Pro 65';
+    src: url('../../fonts/AvenirLTPro-MediumOblique.eot');
+    src: url('../../fonts/AvenirLTPro-MediumOblique.eot?#iefix') format('embedded-opentype'), url('../../fonts/AvenirLTPro-MediumOblique.woff2') format('woff2'), url('../../fonts/AvenirLTPro-MediumOblique.woff') format('woff'), url('../../fonts/AvenirLTPro-MediumOblique.ttf') format('truetype'), url('../../fonts/AvenirLTPro-MediumOblique.svg#AvenirLTPro-MediumOblique') format('svg');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Avenir LT Pro 55 Roman';
+    src: url('../../fonts/AvenirLTPro-Oblique.eot');
+    src: url('../../fonts/AvenirLTPro-Oblique.eot?#iefix') format('embedded-opentype'), url('../../fonts/AvenirLTPro-Oblique.woff2') format('woff2'), url('../../fonts/AvenirLTPro-Oblique.woff') format('woff'), url('../../fonts/AvenirLTPro-Oblique.ttf') format('truetype'), url('../../fonts/AvenirLTPro-Oblique.svg#AvenirLTPro-Oblique') format('svg');
+    font-weight: normal;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Avenir LT Pro';
+    src: url('../../fonts/AvenirLTPro-Roman.eot');
+    src: url('../../fonts/AvenirLTPro-Roman.eot?#iefix') format('embedded-opentype'), url('../../fonts/AvenirLTPro-Roman.woff2') format('woff2'), url('../../fonts/AvenirLTPro-Roman.woff') format('woff'), url('../../fonts/AvenirLTPro-Roman.ttf') format('truetype'), url('../../fonts/AvenirLTPro-Roman.svg#AvenirLTPro-Roman') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
 }
