edit font face property.

--- a/scss/modules/mixins.scss
+++ b/scss/modules/mixins.scss
@@ -8,9 +8,8 @@
     flex-wrap: $wrapProp;
 }
 
-@mixin text-styles ($size, $family, $color) {
+@mixin text-styles ($size, $color) {
     font-size: $size;
-    font-family: $family;
     color: $color;
 }
 
