--- a/scss/page/designers-box.scss
+++ b/scss/page/designers-box.scss
@@ -8,13 +8,15 @@
         align-items: center;
         margin-bottom: 54px;
         h4{
-            @include text-styles (32px, 'Avenir LT Pro 55 Heavy', $black_color);
+            font-family: 'Avenir LT Pro 55 Heavy';
+            @include text-styles (32px, $black_color);
             @media screen and (max-width: 1080px) {
                 font-size: 20px;
             }
         }
         h6{
-            @include text-styles (14px, 'Avenir LT Pro 55 Heavy', $black_color);
+            font-family: 'Avenir LT Pro 55 Heavy';
+            @include text-styles (14px, $black_color);
         }
     }
     .designers-div{
@@ -39,13 +41,15 @@
                 margin-top: 15px;
                 max-width: 70px;
                 text-align: center;
-                @include text-styles (16px, 'Avenir LT Pro Medium', $black_color);
+                font-family: 'Avenir LT Pro Medium';
+                @include text-styles (16px, $black_color);
                 cursor: pointer;
             }
             h6{
                 margin-top: 10px;
                 text-align: center;
-                @include text-styles (12px, 'Avenir LT Pro Book', $black_color);
+                font-family: 'Avenir LT Pro Book';
+                @include text-styles (12px, $black_color);
             }
             button{
                 margin-top: 17px;
@@ -53,7 +57,8 @@
                 border: none;
                 border-radius: 12px;
                 border: 1px solid #D8D8D8;
-                @include text-styles (14px, 'Avenir LT Pro 55 Heavy', $black_color);
+                font-family: 'Avenir LT Pro 55 Heavy';
+                @include text-styles (14px, $black_color);
                 background-color: $white_color;
                 cursor: pointer;
             }
