--- a/scss/page/footer.scss
+++ b/scss/page/footer.scss
@@ -14,13 +14,15 @@
     }
     .footer-logo{
         h4{
-            @include text-styles(16px, 'Avenir LT Pro Book', $black_color);
+            font-family: 'Avenir LT Pro Book';
+            @include text-styles(16px, $black_color);
             @media screen and (max-width: 360px) {
                 font-size: 8px;
             }
         }
         span{
-            @include text-styles(16px, 'Avenir LT Pro 65 Black', $black_color);
+            font-family: 'Avenir LT Pro 65 Black';
+            @include text-styles(16px, $black_color);
             @media screen and (max-width: 360px) {
                 font-size: 8px;
             }
