--- a/scss/page/post-box.scss
+++ b/scss/page/post-box.scss
@@ -57,7 +57,8 @@
             max-width: 289px;
             width: 100%;
             margin-bottom: 30px;
-            @include text-styles (18px, 'Avenir LT Pro Medium', $black_color);
+            font-family: 'Avenir LT Pro Medium';
+            @include text-styles (18px, $black_color);
             @media screen and (max-width: 360px) {
                 max-width: 150px;
             }
@@ -73,10 +74,11 @@
         cursor: pointer;
         padding: 20px 100px;
         border-radius: 12px;
-        @include text-styles (16px, 'Avenir LT Pro 55 Heavy', $black_color);
+        font-family: 'Avenir LT Pro 55 Heavy';
+        @include text-styles (16px, $black_color);
         @include hover-transition ( .3s);
         &:hover{
-            @include text-styles (26px, 'Avenir LT Pro 55 Heavy', $black_color);
+            @include text-styles (26px, $black_color);
         }
         @media screen and (max-width: 1080px) {
             padding: 15px 50px;
@@ -84,7 +86,7 @@
             border-radius: 10px;
             margin: 50px 0;
             &:hover{
-                @include text-styles (20px, 'Avenir LT Pro 55 Heavy', $black_color);
+                @include text-styles (20px, $black_color);
             }
         }
         @media screen and (max-width: 360px) {
@@ -93,7 +95,7 @@
             border-radius: 8px;
             margin: 30px 0;
             &:hover{
-                @include text-styles (15px, 'Avenir LT Pro 55 Heavy', $black_color);
+                @include text-styles (15px, $black_color);
             }
         }
     }
